lab-manifest/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: voting-app
  labels:
    app.kubernetes.io/part-of: voting-app
