lab-manifest/08-vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: voting-app
  labels:
    app.kubernetes.io/name: vote
    app.kubernetes.io/part-of: voting-app
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: vote
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vote
        app.kubernetes.io/part-of: voting-app
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: vote
          image: dockersamples/examplevotingapp_vote:latest
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
