lab-manifest/07-redis-service.yaml
# Nome do Service precisa ser "redis" - hostname fixo usado pelas imagens
# dockersamples/examplevotingapp_vote e _worker.
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: voting-app
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: voting-app
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
