lab-manifest/12-result-service.yaml
# type: LoadBalancer - ver comentario em 09-vote-service.yaml.
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: voting-app
  labels:
    app.kubernetes.io/name: result
    app.kubernetes.io/part-of: voting-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: result
  ports:
    - port: 80
      targetPort: 80
      name: http
